testcases/bindgen/213/error_message.txt
error[E0080]: evaluation of constant value failed
   --> ./open/213/generated_bindings.rs:149:5
    |
149 |     ["Size of Bar"][::std::mem::size_of::<Bar>() - 4usize];
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ index out of bounds: the length is 1 but the index is 4

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0080`.
